# NightWatcher2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: nw_install_links.cmake.in  toolchain-aarch64.cmake  uninstall.sh.in
config/: nightwatcher.conf.example  nightwatcher.conf.example.in
config/systemd/: nightwatcherd.service  nightwatcherd.service.in
config/udev/: 99-nightwatcher-sqm.rules
debian/: config  postinst.in  postrm.in  prerm.in  templates
docs/: architecture.md  dsn.md  sqm-protocol.md
include/nightwatcher/: version.hpp.in
sql/: schema.sql  setup.sql
src/api/: http_server.cpp  http_server.hpp  tls_cert.cpp  tls_cert.hpp
src/auth/: password.cpp  password.hpp
src/cli/: gdrive_auth.cpp  nwdb.cpp  sqmctl.cpp
src/daemon/: config.cpp  config.hpp  logging.cpp  logging.hpp  main.cpp  scheduler.cpp  scheduler.hpp
src/db/: database.cpp  database.hpp
src/export/: dsn_format.cpp  export_runner.cpp  export_runner.hpp  export_scheduler.cpp  export_scheduler.hpp  exporter.cpp  exporter.hpp  gdrive.cpp  gdrive.hpp  timeutil.cpp  timeutil.hpp
src/sqm/: device_factory.cpp  device_factory.hpp  discovery.cpp  discovery.hpp  protocol.cpp  protocol.hpp  serial_transport.cpp  serial_transport.hpp  sqm_device.cpp  sqm_device.hpp  tcp_transport.cpp  tcp_transport.hpp  transport.hpp
src/weather/: provider.cpp  provider.hpp  weather_scheduler.cpp  weather_scheduler.hpp
tests/: api_test.cpp  config_test.cpp  db_test.cpp  discovery_test.cpp  export_test.cpp  gdrive_test.cpp  protocol_test.cpp  serial_transport_test.cpp  timeutil_test.cpp  tls_cert_test.cpp  weather_test.cpp
tools/: sqm-sim.cpp
web/: index.html
web/css/: app.css
web/js/: app.js
